@@ -6,6 +6,7 @@ zeit.find changes
 
 - Reichweite in der Suche anzeigen (#7860).
 
+- Vorschau-Link funktioniert wieder (#7858).
 
 0.20.3 (2010-08-09)
 -------------------
